--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "wdio-chromedriver-service": "^6.0.3"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "nanoid": "^3.1.20"
   }
 }
