--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@wdio/mocha-framework": "^6.4.0",
     "@wdio/spec-reporter": "^6.4.0",
     "@wdio/sync": "^6.4.0",
-    "chromedriver": "^86.0.0",
     "wdio-chromedriver-service": "^6.0.3"
   },
   "dependencies": {
+    "chromedriver": "^89.0.0",
     "dotenv": "^8.2.0",
+    "file-system": "^2.2.2",
     "nanoid": "^3.1.20"
   }
 }
